adding hash and salt with bcrypt

--- a/index.html
+++ b/index.html
@@ -31,5 +31,13 @@
         <input type="hidden" name="_method" value="UPDATE">
         <button type="submit">Update</button>
     </form>
+    <hr>
+    <h2>Login</h2>
+    <form method="POST" action="/login">
+        <input type="text" name="username" placeholder="Username">
+        <input type="text" name="password" placeholder="Password">
+        <input type="hidden" name="_method" value="LOGIN">
+        <button type="submit">Login</button>
+    </form>
 </body>
 </html>
